[package]
name = "vulnus_converted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.12",features=["derive"]}
serde = {version="1.0.136",features=["derive"]}
serde_json = {version="1.0.79"}
csv = {version = "1.1.6"}

reqwest = {version = "0.11.10"}

# [features]
# online = ["dep:reqwest"]